--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-todolist",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://chelly-hsu.github.io/react-todolist.git",
+  "homepage": "https://chelly-hsu.github.io/react-todolist",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
